fixed up a ton of layout problems on learning page

--- a/Learning.css
+++ b/Learning.css
@@ -1,3 +1,38 @@
+.container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.videos-container {
+  justify-items: center;
+}
+.podcast-container {
+  min-width: 100%;
+  font-size: large;
+  height: 600px;
+  width: 500px;
+}
+
+.clearfix {
+  overflow: auto;
+}
+
+.sheet {
+  position: relative;
+  margin: 0 auto;
+}
+
 .u-section-1 {
   background-image: linear-gradient(
       0deg,
@@ -109,6 +144,10 @@
   left: -39%;
   height: 178%;
   top: -39%;
+}
+
+.video-card {
+  min-height: 328px;
 }
 
 .u-section-2 .u-video-3 {
